# api-diff

./: Cargo.toml  README.md
src/: config.rs  config.yml  diff.rs  headers.json  main.rs  query.json  utils.rs
