[package]
edition = "2021"
name = "api-diff"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.9", features = ["derive"]}
colored = "2.1.0"
reqwest = {version = "*", features = ["json"]}
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
similar = "2.5.0"
tokio = {version = "1.38.0", features = ["full"]}
